christoff fixed, added timeline, background

--- a/danish.html
+++ b/danish.html
@@ -21,7 +21,7 @@
     <header>
       <nav>
         <ul id="navId">
-          <li><a href="mainPage.html">Home</a></li>
+          <li class ="nav_li"><a href="mainPage.html">Home</a></li>
           <li id="unicodeLi">
             <details>
               <summary>&#9776; Countries</summary>
@@ -32,7 +32,7 @@
               </ul>
             </details>
           </li>
-          <li id="aboutUs"><a href="about_us.html">About us</a></li>
+          <li id="aboutUs" class ="nav_li"><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
     </header>
@@ -40,7 +40,7 @@
       <h1>Danish Viking Culture</h1>
       <article>
         <ul>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a
                 href="https://www.english-heritage.org.uk/visit/places/lindisfarne-priory/History/viking-raid/"
@@ -53,7 +53,7 @@
               alt="drawing of wikings disembarking"
             />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a href="https://en.wikipedia.org/wiki/Battle_of_Hingston_Down"
                 >The battle of hingston down was fought
@@ -65,7 +65,7 @@
               alt="Image of the southern british isles"
             />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a
                 href="https://www.historyextra.com/period/viking/key-viking-dates-lindisfarne-raid-danelaw-swein-forkbeard-harald-hardrada-stamford-bridge/"
@@ -80,7 +80,7 @@
               alt="Image of a viking artifact"
             />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a
                 href="https://www.historyextra.com/period/viking/key-viking-dates-lindisfarne-raid-danelaw-swein-forkbeard-harald-hardrada-stamford-bridge/"
@@ -90,7 +90,7 @@
             <h2>866 A.C</h2>
             <img src="images/denmark/viking_ship.jpg" alt="Third year image" />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               Within the 870s the Vikings had conquered most of north-east
               England
@@ -101,7 +101,7 @@
               alt="Fourh year image"
             />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a href="https://www.britannica.com/topic/Battle-of-Edington"
                 >The battle of Edington was fought</a
@@ -110,7 +110,7 @@
             <h2>878 A.C</h2>
             <img src="images/denmark/viking_ship_2.jpg" alt="Fith year image" />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a
                 href="https://www.historic-uk.com/HistoryUK/HistoryofBritain/Battle-of-Brunanburh/"
@@ -120,7 +120,7 @@
             <h2>937 A.C</h2>
             <img src="images/denmark/viking_battle.jpg" alt="Fith year image" />
           </li>
-          <li>
+          <li class="timeline">
             <p class="historicalParagraph">
               <a href="https://en.wikipedia.org/wiki/Battle_of_the_Holme"
                 >The battle of Holme was fought</a
