--- a/norwegian.html
+++ b/norwegian.html
@@ -1,201 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Norwegian Viking Culture</title>
     <meta charset="UTF-8" />
-    <meta name="description" content="Norwegian Viking History" />
-    <meta name="keyworkds" content="scandinavia, vikings, culture, history" />
+    <meta name="description" content="Swedish Viking Culture" />
+    <meta name="keyworkds" content="swedish, vikings, culture, history" />
     <meta name="author" content="Dikult105 group" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="css/style.css" title="v1" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet">  
+    <title>
+      Swedish Viking Culture
+    </title>
     <meta name="robots" content="noindex, nofollow" />
     <meta name="robots" content="noarchive" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:600&display=swap" rel="stylesheet"> 
   </head>
+
   <body>
     <header>
-      <ul id="navId">
-        <li><a href="mainPage.html">Home</a></li>
-        <li id="unicodeLi">
-          <details>
-            <summary>&#9776; Countries</summary>
-            <ul>
-              <li class="countries"><a href="norwegian.html">Norway</a></li>
-              <li class="countries"><a href="swedish.html">Sweden</a></li>
-              <li class="countries"><a href="danish.html">Denmark</a></li>
-            </ul>
-          </details>
-        </li>
-        <li id="aboutUs"><a href="about_us.html">About us</a></li>
-      </ul>
+      <nav>
+        <ul id="navId">
+          <li class="nav_li"><a href="mainPage.html">Home</a></li>
+          <li id="unicodeLi" class ="nav_li">
+            <details>
+              <summary>&#9776; Countries</summary>
+              <ul>
+                <li class="countries"><a href="norwegian.html">Norway</a></li>
+                <li class="countries"><a href="swedish.html">Sweden</a></li>
+                <li class="countries"><a href="danish.html">Denmark</a></li>
+              </ul>
+            </details>
+          </li>
+          <li id="aboutUs" class ="nav_li"><a href="about_us.html">About us</a></li>
+        </ul>
       </nav>
     </header>
     <!-- Christoffer  did this -->
-	<main>
+    <main>
       <h1>Norwegian Viking Culture</h1>
       <article>
         <ul>
-          <li>
-            <p class="historicalParagraph">Norse sea-raiders sack the
-            Anglo-Celtic monastary at Lindisfarne.</p>
-            <h2>793</h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                Norse sea-raiders sack the
+                Anglo-Celtic monastary at Lindisfarne.</p>
+            </p>
+            <h2 class="date">793 A.C</h2>
             <img
               src="images/lindis.jpg"
               alt="picture of...."
-              width="200px"
-              height="150px"
             />
           </li>
-          <li>
-            <p class="historicalParagraph">Norse raid on Ireland begin</p>
-            <h2>795</h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                Norse raid on Ireland begin
+            </p>
+            <h2 class="date">795 A.C</h2>
             <img
-              src="images/irel.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
+                src="images/irel.jpg"
+                alt="picture of...."
             />
           </li>
-          <li>
-            <p class="historicalParagraph">Reign of  king halfdan the black of Norway</p>
-            <h2>840</h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                Reign of  king halfdan the black of Norway
+            </p>
+            <h2 class="date">840 A.C</h2>
             <img
               src="images/halfdan.jpg"
               alt="picture of...."
-              width="200px"
-              height="150px"
             />
           </li>
-          <li>
-            <p class="historicalParagraph">Raids on Moorish spain begin</p>
-            <h2>844-845<h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                Raids on Moorish spain begin
+            </p>
+            <h2 class="date">844 A.C</h2>
             <img
               src="images/moor.jpg"
               alt="picture of...."
-              width="200px"
-              height="150px"
             />
           </li>
-          <li>
-            <p class="historicalParagraph">First Norse raid on Wales recorded in the Welsh chronicles
-            Annales Cambriae, Brut y Tywysogion and Brut y Saeson stating that a
-            certain Cyngen or Cinnen died on the swords of "the Heathen".</p>
-            <h2>851</h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                First Norse raid on Wales recorded in the Welsh chronicles
+                Annales Cambriae, Brut y Tywysogion and Brut y Saeson stating that a
+                certain Cyngen or Cinnen died on the swords of "the Heathen".
+            </p>
+            <h2 class="date">851 A.C</h2>
             <img
               src="images/wales.png"
               alt="picture of...."
-              width="200px"
-              height="150px"
             />
           </li>
-          <li>
-            <p class="historicalParagraph">Norway discover Iceland </p>
-            <h2>860</h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                Norway discover Iceland
+            </p>
+            <h2 class="date">860 A.C</h2>
             <img
               src="images/icela.jpg"
               alt="picture of...."
-              width="200px"
-              height="150px"
             />
           </li>
-          <li>
-            <p class="historicalParagraph">The setlement of iceland begins</p>
-            <h2>870</h2>
+          <li class="timeline">
+            <p class="historicalParagraph">
+                The setlement of iceland begins
+            </p>
+            <h2 class="date">870 A.C</h2>
             <img
-              src="images/rey.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
+                src="images/rey.jpg"
+                alt="picture of...."
             />
-          </li>
-          <li>
-            <p class="historicalParagraph">Reign of harald hårfagre</p>
-            <h2>870-945</h2>
-            <img
-              src="images/harald.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-          </li>
-          <li>
-            <p class="historicalParagraph">Alfred the Great defeats Guthrum/Guthorm and forces the Viking forces to accept Christianity in return for English for settlement.Harald Harfagra completes his conquest and unification of Norway and the Orkney Islands, many Norwegians flee to Iceland.</p>
-            <h2>878</h2>
-            <img
-              src="images/alfred.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-          </li>
-          <li>
-            <p class="historicalParagraph">Ulfljotr the Norwegian brings the Gulathing Law to Iceland, where it is used as a model upon which Icelandic Law is based.</p>
-            <h2>920</h2>
-            <img
-              src="images/gula.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-          </li>
-          <li>
-            <p class="historicalParagraph">Reign of Håkon the good </p>
-            <h2>946</h2>
-            <img
-              src="images/håkon.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-          </li>
-          <li>
-            <p class="historicalParagraph">Start of reign of King Olafr Tryggvasson of Norway, Norway adopts Christianity.</p>
-            <h2>947</h2>
-            <img
-              src="images/olaf.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-		      <li>
-            <p class="historicalParagraph">Leifr Eiriksson makes his voyages to Vinland (America), attempts made to settle there are prevented by opposition from skraelings (Native Americans).</p>
-            <h2>1000-1005</h2>
-            <img
-              src="images/leif.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-			    <li>
-            <p class="historicalParagraph">Ard-Righ Brian Boru defeats the Norse in Ireland at the battle of Clontarf, both Brian and Jarl Sigurdhr of Orkney are slain.</p>
-            <h2>1016</h2>
-            <img
-              src="images/clont.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-			    <li>
-            <p class="historicalParagraph">King Olaf the Saint is killed at Stiklestad.</p>
-            <h2>1030</h2>
-            <img
-              src="images/stolaf.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-			    <li>
-            <p class="historicalParagraph">Haraldr Hardrada, king of Norway, is killed during an attempted invasion of England fighting against Harold Godwinsson, the English king.Harold Godwinsson is killed at Hastings by the forces of Duke William (the Bastard) of Normandy.The Norman Conquest takes place.The practice of "going viking" ends.</p>
-            <h2>1066</h2>
-            <img
-              src="images/haraldhard.jpg"
-              alt="picture of...."
-              width="200px"
-              height="150px"
-            />
-          </li>
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">
+                    Alfred the Great defeats Guthrum/Guthorm and forces the
+                    Viking forces to accept Christianity in return for
+                    English for settlement.Harald Harfagra completes his
+                    conquest and unification of Norway and the Orkney
+                    Islands, many Norwegians flee to Iceland
+                </p>
+                <h2 class="date">878 A.C</h2>
+                <img
+                    src="images/alfred.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">
+                    Ulfljotr the Norwegian brings the
+                    Gulathing Law to Iceland, where it is used as a model upon which
+                    Icelandic Law is based.
+                </p>
+                <h2 class="date">920 A.C</h2>
+                <img
+                    src="images/gula.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">Reign of Håkon the good </p>
+                <h2>946 A.C</h2>
+                <img
+                    src="images/håkon.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">Start of reign of King Olafr Tryggvasson of Norway, Norway adopts Christianity.</p>
+                <h2>947 A.C</h2>
+                <img
+                    src="images/olaf.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">Leifr Eiriksson makes his voyages to Vinland (America), attempts made to settle there are prevented by opposition from skraelings (Native Americans).</p>
+                <h2>1000 A.C</h2>
+                <img class="date"
+                    src="images/leif.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">Ard-Righ Brian Boru defeats the Norse in Ireland at the battle of Clontarf, both Brian and Jarl Sigurdhr of Orkney are slain.</p>
+                <h2>1016 A.C</h2>
+                <img
+                    src="images/clont.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">King Olaf the Saint is killed at Stiklestad.</p>
+                <h2>1030 A.C</h2>
+                <img
+                    src="images/stolaf.jpg"
+                    alt="picture of...."
+                />
+            </li>
+            <li class="timeline">
+                <p class="historicalParagraph">Haraldr Hardrada, king of Norway, is killed during an attempted invasion of England fighting against Harold Godwinsson, the English king.Harold Godwinsson is killed at Hastings by the forces of Duke William (the Bastard) of Normandy.The Norman Conquest takes place.The practice of "going viking" ends.</p>
+                <h2>1066 A.C</h2>
+                <img
+                    src="images/haraldhard.jpg"
+                    alt="picture of...."
+                />
+            </li>
         </ul>
-		<!-- timeline is not straith -->
       </article>
     </main>
   </body>
