--- a/swedish.html
+++ b/swedish.html
@@ -63,7 +63,7 @@
         <ul>
           <li class="timeline">
             <p class="historicalParagraph">
-              <a href="https://www.britannica.com/place/Sweden/The-Viking-Age">
+              <a href="https://www.britannica.com/place/Sweden/The-Viking-Age"></a>
                 In this period Sweden was parted into several tribes and their
                 districts are still partly indicated by the present divisions of
                 the country.
@@ -72,7 +72,7 @@
             <h2 class="date">700 A.C</h2>
             <img
               src="images/scandinavian_map.jpg"
-              alt="700 A.C year image"
+              alt="map of vikings settlements in scandianvia"
             />
           </li>
           <li class="timeline">
@@ -85,9 +85,9 @@
               </a>
             </p>
             <h2 class="date">800 A.C</h2>
-            <img
+            <img id ="ship_image"
               src="images/viking_ship.jpg"
-              alt="800 A.C year image"
+              alt="viking ship"
             />
           </li>
           <li class="timeline">
@@ -103,7 +103,7 @@
             <h2 class="date">900 A.C</h2>
             <img id="special"
               src="images/swedish_settle.png"
-              alt="900 A.C year image"
+              alt="map of viking routes"
             />
           </li>
           <li class="timeline">
@@ -117,7 +117,7 @@
             <h2 class="date">1000 A.C</h2>
             <img 
               src="images/viking_market.jpg"
-              alt="1000 A.C year image"
+              alt="paint of ship landing"
             />
           </li>
           <li class="timeline">
@@ -131,7 +131,7 @@
             <h2 class="date">1130 A.C</h2>
             <img
               src="images/viking_king.jpg"
-              alt="1130 A.C year image"
+              alt="draw of a imposing viking"
             />
           </li>
           <li class="timeline">
@@ -145,7 +145,7 @@
             <h2 class="date">1150 A.C</h2>
             <img
               src="images/sweedish_rune.jpg"
-              alt="1150 A.C year image"
+              alt="rune picture"
             />
           </li>
         </ul>
