--- a/mainPage.html
+++ b/mainPage.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <ul id="navId">
-          <li><a href="mainPage.html">Home</a></li>
+          <li class="nav_li"><a href="mainPage.html">Home</a></li>
           <li id="unicodeLi">
             <details>
               <summary>&#9776; Countries</summary>
@@ -27,21 +27,55 @@
               </ul>
             </details>
           </li>
-          <li id="aboutUs"><a href="about_us.html">About us</a></li>
+          <li id="aboutUs" class="nav_li"><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <h1><span id="h1Top">Vikings:</span> An Historical Review</h1>
-      <p id="main_text">
-        Today we refer to Viking Age Scandinavians generally as Vikings as
-        though they were one group. But the people known as Vikings weren’t an
-        entirely homogeneous mass of people. There were Norwegian Vikings,
-        Danish Vikings and Swedish Vikings (We won’t have a separate category
-        for the Icelanders since they were originally Norwegian, after all, and
-        didn’t really go Viking like their counterparts eastward did, they also
-        developed a more settled society.
-      </p>
+      <section class="join_content">
+        <h2 id="main_subtitle">Summary</h2>
+        <p class="main_text">
+          Today we refer to Viking Age Scandinavians generally as Vikings as
+          though they were one group. But the people known as Vikings weren’t an
+          entirely homogeneous mass of people. There were Norwegian Vikings,
+          Danish Vikings and Swedish Vikings (We won’t have a separate category
+          for the Icelanders since they were originally Norwegian, after all, and
+          didn’t really go Viking like their counterparts eastward did, they also
+          developed a more settled society.
+        </p>
+        <h2 id="main_subtitle">General view</h2>
+        <p class="main_text">
+            The Vikings ventured far from their homelands in Scandinavia and
+            became the first Europeans to discover Greenland and even North
+            America (which they called “Vinland”) – roughly 500 years before
+            Christopher Columbus. Along the way, they became the first people to
+            establish sizable settlements in Iceland and other North Atlantic
+            islands, and also colonized the territories their warriors conquered
+            throughout northern Europe. These explorations and settlements have
+            had a decisive impact upon these places that persists even today.
+        </p>
+      </section>
     </main>
+    <aside class="join_content">
+      <section>
+          <p>
+            Find more information about runes of Scandinavian
+            and viking culture.
+          </p>
+          <a href="https://sonsofvikings.com/blogs/history/viking-runes-guide-runic-alphabet-meanings-nordic-celtic-letters">
+            <img src="images/runes_aside.jpg" alt="rune image of aside"/>
+          </a>
+      </section>
+      <section>
+          <p>
+            Find more information about religions of Scandinavian
+            and viking culture.
+          </p>
+          <a href="https://www.lifeinnorway.net/viking-religion/">
+            <img src="images/religion_odin.jpg"/>
+          </a>
+      </section>
+    </aside>
   </body>
 </html>
