Footer added, about_us fixed

--- a/about_us.html
+++ b/about_us.html
@@ -21,7 +21,7 @@
     <header>
       <nav>
         <ul id="navId">
-          <li><a href="mainPage.html">Home</a></li>
+          <li class="nav_li"><a href="mainPage.html">Home</a></li>
           <li id="unicodeLi">
             <details>
               <summary>&#9776; Countries</summary>
@@ -32,7 +32,7 @@
               </ul>
             </details>
           </li>
-          <li id="aboutUs"><a href="about_us.html">About us</a></li>
+          <li id="aboutUs" class ="nav_li"><a href="about_us.html">About us</a></li>
         </ul>
       </nav>
     </header>
@@ -52,40 +52,22 @@
             <img
               class="contactImage"
               src="images/J.jpg"
-              width="350px"
-              height="300px"
               alt="first pic of us"
             />
-            <p>
-              Contact email:
-              <a href="mailto:julio@email.com">juliocontact@email.com</a>
-            </p>
           </li>
           <li>
             <img
               class="contactImage"
               src="images/p.jpg"
-              width="350px"
-              height="300px"
               alt="second pic of us"
             />
-            <p>
-              Contact email:
-              <a href="mailto:paalcontact@email.com">paalcontact@email.com</a>
-            </p>
           </li>
           <li>
             <img
               class="contactImage"
               src="images/c.jpg"
-              width="350px"
-              height="300px"
               alt="third pic of us"
             />
-            <p>
-              Contact email:
-              <a href="Christoffercontact@email.com">Christoffercontact@email.com</a>
-            </p>
           </li>
         </ul>
       </article>
@@ -102,5 +84,11 @@
         </form>
       </article>
     </main>
+    <footer id="join_footer">
+      <section>
+        <p>Made by team 14 WebDesign. 2019</p>
+        <img src="images/copi.png" alt="Copyright icon"/>
+      </section>
+    </footer>
   </body>
 </html>
