--- a/danish.html
+++ b/danish.html
@@ -132,5 +132,11 @@
         </ul>
       </article>
     </main>
+    <footer class="join_footer">
+      <section>
+        <p>Made by team 14 WebDesign. 2019</p>
+        <img src="images/copi.png" alt="Copyright icon"/>
+      </section>
+    </footer>
   </body>
 </html>
