--- a/mainPage.html
+++ b/mainPage.html
@@ -77,5 +77,11 @@
           </a>
       </section>
     </aside>
+    <footer id="join_footer">
+      <section>
+        <p>Made by team 14 WebDesign. 2019</p>
+        <img src="images/copi.png" alt="Copyright icon"/>
+      </section>
+    </footer>
   </body>
 </html>
