--- a/swedish.html
+++ b/swedish.html
@@ -17,7 +17,6 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="robots" content="noarchive" />
   </head>
-
   <body>
     <header>
       <nav>
@@ -49,16 +48,7 @@
             Sweden (along with Denmark and Norway) such as Ragnar Lothbrok or
             Bjorn Ironside (both allegedly belonging to the Royal House of
             Munso) at certain times. The Swedes, then known as Varangians, or
-            Rus. They are very interesting because out of the three they were
-            the ones who stayed true to their pagan ways for the longest. They
-            were poised to discover and pillage new lands in the east along the
-            Volga and Dnieper rivers. Their expeditions, however, were of a
-            different sort than the Danes and Norwegians in the west. They were
-            excellent explorers and tradesmen, but simply not as violent as the
-            others (in relative terms, of course they terrorized many primitives
-            along the Baltic) The goal of the Rus was primarily to trade (or so
-            we think). They established long trade routes to the middle east and
-            around the Black Sea.
+            Rus.
           </p></span>
         <ul>
           <li class="timeline">
@@ -151,5 +141,11 @@
         </ul>
       </article>
     </main>
+    <footer id="join_footer">
+      <section>
+        <p>Made by team 14 WebDesign. 2019</p>
+        <img src="images/copi.png" alt="Copyright icon"/>
+      </section>
+    </footer>
   </body>
 </html>
