--- a/norwegian.html
+++ b/norwegian.html
@@ -189,5 +189,11 @@
         </ul>
       </article>
     </main>
+    <footer id="join_footer">
+      <section>
+        <p>Made by team 14 WebDesign. 2019</p>
+        <img src="images/copi.png" alt="Copyright icon"/>
+      </section>
+    </footer>
   </body>
 </html>
