--- a/mainPage.html
+++ b/mainPage.html
@@ -59,7 +59,7 @@
     </main>
     <aside class="join_content">
       <section>
-          <p>
+          <p class="aside_p">
             Find more information about runes of Scandinavian
             and viking culture.
           </p>
@@ -68,7 +68,7 @@
           </a>
       </section>
       <section>
-          <p>
+          <p class="aside_p">
             Find more information about religions of Scandinavian
             and viking culture.
           </p>
@@ -80,7 +80,7 @@
     <footer id="join_footer">
       <section>
         <p>Made by team 14 WebDesign. 2019</p>
-        <img src="images/copi.png" alt="Copyright icon"/>
+        <img id="copy" src="images/copi.png" alt="Copyright icon"/>
       </section>
     </footer>
   </body>
