--- a/norwegian.html
+++ b/norwegian.html
@@ -22,8 +22,8 @@
           <li class="nav_li"><a href="mainPage.html">Home</a></li>
           <li id="unicodeLi" class ="nav_li">
             <details>
-              <summary>&#9776; Countries</summary>
-              <ul>
+              <summary id="countries_ul">&#9776; Countries</summary>
+              <ul >
                 <li class="countries"><a href="norwegian.html">Norway</a></li>
                 <li class="countries"><a href="swedish.html">Sweden</a></li>
                 <li class="countries"><a href="danish.html">Denmark</a></li>
