--- a/mainPage.html
+++ b/mainPage.html
@@ -80,7 +80,7 @@
     <footer id="join_footer">
       <section>
         <p>Made by team 14 WebDesign. 2019</p>
-        <img id="copy" src="images/copi.png" alt="Copyright icon"/>
+        <img src="images/copi.png" alt="Copyright icon"/>
       </section>
     </footer>
   </body>
