Finished images stretching

--- a/danish.html
+++ b/danish.html
@@ -75,7 +75,7 @@
               </a>
             </p>
             <h2>865 A.C</h2>
-            <img
+            <img id="large_img"
               src="images/denmark/viking-raid_large.webp"
               alt="Image of a viking artifact"
             />
