--- a/mainPage.html
+++ b/mainPage.html
@@ -31,9 +31,9 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main class="join">
       <h1><span id="h1Top">Vikings:</span> An Historical Review</h1>
-      <section class="join_content">
+      <section>
         <h2 id="main_subtitle">Summary</h2>
         <p class="main_text">
           Today we refer to Viking Age Scandinavians generally as Vikings as
@@ -56,27 +56,27 @@
             had a decisive impact upon these places that persists even today.
         </p>
       </section>
+      <aside>
+        <section>
+            <p class="aside_p">
+              Find more information about runes of Scandinavian
+              and viking culture.
+            </p>
+            <a href="https://sonsofvikings.com/blogs/history/viking-runes-guide-runic-alphabet-meanings-nordic-celtic-letters">
+              <img src="images/runes_aside.jpg" alt="rune image of aside"/>
+            </a>
+        </section>
+        <section>
+            <p class="aside_p">
+              Find more information about religions of Scandinavian
+              and viking culture.
+            </p>
+            <a href="https://www.lifeinnorway.net/viking-religion/">
+              <img src="images/religion_odin.jpg"/>
+            </a>
+        </section>
+      </aside>
     </main>
-    <aside class="join_content">
-      <section>
-          <p class="aside_p">
-            Find more information about runes of Scandinavian
-            and viking culture.
-          </p>
-          <a href="https://sonsofvikings.com/blogs/history/viking-runes-guide-runic-alphabet-meanings-nordic-celtic-letters">
-            <img src="images/runes_aside.jpg" alt="rune image of aside"/>
-          </a>
-      </section>
-      <section>
-          <p class="aside_p">
-            Find more information about religions of Scandinavian
-            and viking culture.
-          </p>
-          <a href="https://www.lifeinnorway.net/viking-religion/">
-            <img src="images/religion_odin.jpg"/>
-          </a>
-      </section>
-    </aside>
     <footer id="join_footer">
       <section>
         <p>Made by team 14 WebDesign. 2019</p>
