--- a/swedish.html
+++ b/swedish.html
@@ -75,7 +75,7 @@
               </a>
             </p>
             <h2 class="date">800 A.C</h2>
-            <img id ="ship_image"
+            <img id ="large_img"
               src="images/viking_ship.jpg"
               alt="viking ship"
             />
@@ -105,7 +105,7 @@
               </a>
             </p>
             <h2 class="date">1000 A.C</h2>
-            <img 
+            <img id="large_img"
               src="images/viking_market.jpg"
               alt="paint of ship landing"
             />
@@ -119,7 +119,7 @@
               </a>
             </p>
             <h2 class="date">1130 A.C</h2>
-            <img
+            <img id="large_img"
               src="images/viking_king.jpg"
               alt="draw of a imposing viking"
             />
