--- a/danish.html
+++ b/danish.html
@@ -55,8 +55,8 @@
           </li>
           <li class="timeline">
             <p class="historicalParagraph">
-              <a href="https://en.wikipedia.org/wiki/Battle_of_Hingston_Down"
-                >The battle of hingston down was fought
+              <a href="https://en.wikipedia.org/wiki/Battle_of_Hingston_Down">
+                The battle of hingston down was fought
               </a>
             </p>
             <h2>838 A.C</h2>
