--- a/mainPage.html
+++ b/mainPage.html
@@ -32,9 +32,9 @@
       </nav>
     </header>
     <main class="join">
-      <h1><span id="h1Top">Vikings:</span> An Historical Review</h1>
+      <h1><span id="h1Top">Vikings:</span> A Historical Review</h1>
       <section>
-        <h2 id="main_subtitle">Summary</h2>
+        <h2 class="main_subtitle">Summary</h2>
         <p class="main_text">
           Today we refer to Viking Age Scandinavians generally as Vikings as
           though they were one group. But the people known as Vikings weren’t an
@@ -44,7 +44,7 @@
           didn’t really go Viking like their counterparts eastward did, they also
           developed a more settled society.
         </p>
-        <h2 id="main_subtitle">General view</h2>
+        <h2 class="main_subtitle">General view</h2>
         <p class="main_text">
             The Vikings ventured far from their homelands in Scandinavia and
             became the first Europeans to discover Greenland and even North
@@ -72,7 +72,7 @@
               and viking culture.
             </p>
             <a href="https://www.lifeinnorway.net/viking-religion/">
-              <img src="images/religion_odin.jpg"/>
+              <img src="images/religion_odin.jpg" alt="Picture of a monolith"/>
             </a>
         </section>
       </aside>
