--- a/swedish.html
+++ b/swedish.html
@@ -39,7 +39,7 @@
     <main>
       <h1>Swedish Viking Culture</h1>
       <article>
-        <span id="sweedishIntro"
+        <section id="sweedishIntro"
           ><p id="intro_text">
             In the time of the Viking Age Sweden was fragmented into many petty
             kingdoms (also known as earldoms) ruled each by a local chieftain,
@@ -49,17 +49,17 @@
             Bjorn Ironside (both allegedly belonging to the Royal House of
             Munso) at certain times. The Swedes, then known as Varangians, or
             Rus.
-          </p></span>
+          </p></section>
         <ul>
           <li class="timeline">
             <p class="historicalParagraph">
-              <a href="https://www.britannica.com/place/Sweden/The-Viking-Age"></a>
+              <a href="https://www.britannica.com/place/Sweden/The-Viking-Age">
                 In this period Sweden was parted into several tribes and their
                 districts are still partly indicated by the present divisions of
                 the country.
               </a>
             </p>
-            <h2 class="date">700 A.C</h2>
+            <h2>700 A.C</h2>
             <img
               src="images/scandinavian_map.jpg"
               alt="map of vikings settlements in scandianvia"
@@ -74,8 +74,8 @@
                 against western Europe as well.
               </a>
             </p>
-            <h2 class="date">800 A.C</h2>
-            <img id ="large_img"
+            <h2>800 A.C</h2>
+            <img class="large_img"
               src="images/viking_ship.jpg"
               alt="viking ship"
             />
@@ -90,7 +90,7 @@
                 years of raids.
               </a>
             </p>
-            <h2 class="date">900 A.C</h2>
+            <h2>900 A.C</h2>
             <img id="special"
               src="images/swedish_settle.png"
               alt="map of viking routes"
@@ -104,8 +104,8 @@
                 founded the first Russian state, Kievan Rus.
               </a>
             </p>
-            <h2 class="date">1000 A.C</h2>
-            <img id="large_img"
+            <h2>1000 A.C</h2>
+            <img class="large_img"
               src="images/viking_market.jpg"
               alt="paint of ship landing"
             />
@@ -118,8 +118,8 @@
                 centre of Sweden.
               </a>
             </p>
-            <h2 class="date">1130 A.C</h2>
-            <img id="large_img"
+            <h2>1130 A.C</h2>
+            <img class="large_img"
               src="images/viking_king.jpg"
               alt="draw of a imposing viking"
             />
@@ -132,7 +132,7 @@
                 into England even preferring go to the east.
               </a>
             </p>
-            <h2 class="date">1150 A.C</h2>
+            <h2>1150 A.C</h2>
             <img
               src="images/sweedish_rune.jpg"
               alt="rune picture"
@@ -141,7 +141,7 @@
         </ul>
       </article>
     </main>
-    <footer id="join_footer">
+    <footer>
       <section>
         <p>Made by team 14 WebDesign. 2019</p>
         <img src="images/copi.png" alt="Copyright icon"/>
