--- a/norwegian.html
+++ b/norwegian.html
@@ -42,12 +42,12 @@
           <li class="timeline">
             <p class="historicalParagraph">
                 Norse sea-raiders sack the
-                Anglo-Celtic monastary at Lindisfarne.</p>
+                Anglo-Celtic monastary at Lindisfarne.
             </p>
             <h2 class="date">793 A.C</h2>
             <img
               src="images/lindis.jpg"
-              alt="picture of...."
+              alt="Picture of Lindis castle"
             />
           </li>
           <li class="timeline">
@@ -57,7 +57,7 @@
             <h2 class="date">795 A.C</h2>
             <img
                 src="images/irel.jpg"
-                alt="picture of...."
+                alt="Up view of Ireland"
             />
           </li>
           <li class="timeline">
@@ -67,7 +67,7 @@
             <h2 class="date">840 A.C</h2>
             <img
               src="images/halfdan.jpg"
-              alt="picture of...."
+              alt="Photo of the viking halfdan"
             />
           </li>
           <li class="timeline">
@@ -77,7 +77,7 @@
             <h2 class="date">844 A.C</h2>
             <img
               src="images/moor.jpg"
-              alt="picture of...."
+              alt="Picture of moorish castle"
             />
           </li>
           <li class="timeline">
@@ -89,7 +89,7 @@
             <h2 class="date">851 A.C</h2>
             <img
               src="images/wales.png"
-              alt="picture of...."
+              alt="Map of England"
             />
           </li>
           <li class="timeline">
@@ -99,7 +99,7 @@
             <h2 class="date">860 A.C</h2>
             <img
               src="images/icela.jpg"
-              alt="picture of...."
+              alt="Picture of Iceland northern lights"
             />
           </li>
           <li class="timeline">
@@ -109,7 +109,7 @@
             <h2 class="date">870 A.C</h2>
             <img
                 src="images/rey.jpg"
-                alt="picture of...."
+                alt="Picture of a Iceland castle"
             />
             </li>
             <li class="timeline">
@@ -123,7 +123,7 @@
                 <h2 class="date">878 A.C</h2>
                 <img
                     src="images/alfred.jpg"
-                    alt="picture of...."
+                    alt="Draw of king Alfred"
                 />
             </li>
             <li class="timeline">
@@ -135,7 +135,7 @@
                 <h2 class="date">920 A.C</h2>
                 <img
                     src="images/gula.jpg"
-                    alt="picture of...."
+                    alt="Cover of the book with earlies laws"
                 />
             </li>
             <li class="timeline">
@@ -143,7 +143,7 @@
                 <h2>946 A.C</h2>
                 <img
                     src="images/håkon.jpg"
-                    alt="picture of...."
+                    alt="Draw of a fight"
                 />
             </li>
             <li class="timeline">
@@ -151,7 +151,7 @@
                 <h2>947 A.C</h2>
                 <img
                     src="images/olaf.jpg"
-                    alt="picture of...."
+                    alt="Draw of king Olaf"
                 />
             </li>
             <li class="timeline">
@@ -159,7 +159,7 @@
                 <h2>1000 A.C</h2>
                 <img class="date"
                     src="images/leif.jpg"
-                    alt="picture of...."
+                    alt="Draw of arrival in Vinland"
                 />
             </li>
             <li class="timeline">
@@ -167,7 +167,7 @@
                 <h2>1016 A.C</h2>
                 <img
                     src="images/clont.jpg"
-                    alt="picture of...."
+                    alt="Ireland view"
                 />
             </li>
             <li class="timeline">
@@ -175,7 +175,7 @@
                 <h2>1030 A.C</h2>
                 <img
                     src="images/stolaf.jpg"
-                    alt="picture of...."
+                    alt="Draw of a priest"
                 />
             </li>
             <li class="timeline">
@@ -183,7 +183,7 @@
                 <h2>1066 A.C</h2>
                 <img
                     src="images/haraldhard.jpg"
-                    alt="picture of...."
+                    alt="Draw of king of Norway Harald"
                 />
             </li>
         </ul>
